Revert "Mukul/NikhilM | Timeline | Changes to fix scroll distortion"
This reverts commit 302944599dd26714bc0bf3d8eb021b38bb5302c3.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3955,50 +3955,38 @@ footer {
         left: 15px; }
   @keyframes entry-move-left-to-right {
     from {
-      opacity: 0;
-      transform: translateX(100%); }
+      margin-left: 100%; }
     to {
-      opacity: 1;
-      transform: translateX(0%); } }
+      margin-left: 0px; } }
   @keyframes entry-move-right-to-left {
     from {
-      opacity: 0;
-      transform: translateX(100%); }
+      margin-left: 100%; }
     to {
-      opacity: 1;
-      transform: translateX(0%); } } }
+      margin-left: 0px; } } }
 
 @media all and (min-width: 768px) {
   @keyframes entry-move-left-to-right {
     from {
-      opacity: 0;
-      transform: translateX(-100%); }
+      right: 70%; }
     to {
-      opacity: 1;
-      transform: translateX(0%);
+      right: 0%;
       padding-right: 40px; } }
   @keyframes entry-move-right-to-left {
     from {
-      opacity: 0;
-      transform: translateX(200%); }
+      margin-left: 120%; }
     to {
-      opacity: 1;
-      transform: translateX(100%);
+      margin-left: 50%;
       padding-left: 40px; } }
   @keyframes time-move-left-to-right {
     from {
-      opacity: 0;
-      transform: translateX(calc(-700% + 40px)); }
+      right: calc(400% + 40px); }
     to {
-      opacity: 1;
-      transform: translateX(calc(-120% - 40px)); } }
+      right: calc(100% + 40px); } }
   @keyframes time-move-right-to-left {
     from {
-      opacity: 0;
-      transform: translateX(calc(700% + 40px)); }
+      left: calc(400% + 40px); }
     to {
-      opacity: 1;
-      transform: translateX(calc(250% + 40px)); } } }
+      left: calc(100% + 40px); } } }
 
 @keyframes show-after-animation-complete {
   0% {
